swagger update for register and login
